--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -9,199 +9,199 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/hotel_room_list_container_margin"
-        android:layout_marginRight="@dimen/hotel_room_list_container_margin"
-        android:background="@drawable/hotel_detail_ripple"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/room_header_image"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:scaleType="fitCenter" />
-
-        <RelativeLayout
-            android:id="@+id/collapsed_container"
+        <LinearLayout
+            android:id="@+id/root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/room_header_image">
+            android:layout_marginLeft="@dimen/hotel_room_list_container_margin"
+            android:layout_marginRight="@dimen/hotel_room_list_container_margin"
+            android:background="@drawable/hotel_detail_ripple"
+            android:orientation="vertical">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_type_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/view_room_button"
-                android:paddingRight="10dp"
-                android:maxLines="2"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:textColor="#3C3C3C"
-                android:textSize="15sp"
-                app:textStyle="medium" />
+            <ImageView
+                android:id="@+id/room_header_image"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:scaleType="fitCenter" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/collapsed_bed_type_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/room_type_text_view"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="3dp"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                app:textStyle="medium"
-                android:textSize="13sp" />
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/collapsed_urgency_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/collapsed_bed_type_text_view"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="15dp"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                app:textStyle="normal"
-                android:textSize="12sp" />
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/expanded_bed_type_text_view"
+            <RelativeLayout
+                android:id="@+id/collapsed_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/room_type_text_view"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="4dp"
-                android:drawableLeft="@drawable/room_bed"
-                android:drawablePadding="9dp"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                android:textSize="11sp"
-                android:visibility="gone" />
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/expanded_amenity_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/expanded_bed_type_text_view"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="4dp"
-                android:drawableLeft="@drawable/room_checkmark"
-                android:drawablePadding="9dp"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                android:textSize="11sp"
-                android:visibility="gone" />
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/expanded_free_cancellation_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/expanded_amenity_text_view"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="4dp"
-                android:drawableLeft="@drawable/room_checkmark"
-                android:drawablePadding="9dp"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                android:textSize="11sp"
-                android:visibility="gone" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:id="@+id/price_container"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="15dp"
-                android:orientation="horizontal">
+                android:layout_below="@+id/room_header_image">
 
                 <com.expedia.bookings.widget.TextView
-                    android:id="@+id/daily_price_per_night"
+                    android:id="@+id/room_type_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/per_night"
-                    android:textColor="@color/hotel_cell_disabled_text"
-                    android:textSize="17sp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_toLeftOf="@+id/view_room_button"
+                    android:maxLines="2"
+                    android:paddingRight="10dp"
+                    android:textColor="#3C3C3C"
+                    android:textSize="15sp"
                     app:textStyle="medium" />
 
                 <com.expedia.bookings.widget.TextView
-                    android:id="@+id/per_night"
+                    android:id="@+id/collapsed_bed_type_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/daily_price_per_night"
-                    android:text="@string/per_night"
-                    android:textColor="@color/hotel_cell_disabled_text"
-                    android:textSize="14sp"
+                    android:layout_below="@+id/room_type_text_view"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="3dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="13sp"
+                    app:textStyle="medium" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/collapsed_urgency_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/collapsed_bed_type_text_view"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="12sp"
                     app:textStyle="normal" />
 
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/expanded_bed_type_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/room_type_text_view"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="4dp"
+                    android:drawableLeft="@drawable/room_bed"
+                    android:drawablePadding="9dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="11sp"
+                    android:visibility="gone" />
 
-            </LinearLayout>
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/expanded_amenity_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/expanded_bed_type_text_view"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="4dp"
+                    android:drawableLeft="@drawable/room_checkmark"
+                    android:drawablePadding="9dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="11sp"
+                    android:visibility="gone" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/total_price_per_night"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/price_container"
-                android:layout_marginRight="15dp"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                app:textStyle="normal"
-                android:textSize="12sp" />
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/expanded_free_cancellation_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/expanded_amenity_text_view"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="4dp"
+                    android:drawableLeft="@drawable/room_checkmark"
+                    android:drawablePadding="9dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="11sp"
+                    android:visibility="gone" />
 
-            <ToggleButton
-                android:id="@+id/view_room_button"
-                style="@style/HotelToggleButton"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/total_price_per_night"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="10dp"
-                android:paddingBottom="5dp"
-                android:paddingTop="5dp"
-                android:textAppearance="@style/HotelToggleButtonTextAppearance" />
-        </RelativeLayout>
+                <LinearLayout
+                    android:id="@+id/price_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
 
-        <View
-            android:id="@+id/room_info_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:background="@color/hotel_detail_divider" />
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/daily_price_per_night"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/per_night"
+                        android:textColor="@color/hotel_cell_disabled_text"
+                        android:textSize="17sp"
+                        app:textStyle="medium" />
 
-        <RelativeLayout
-            android:id="@+id/room_info_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:paddingBottom="12dp"
-            android:paddingTop="12dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp">
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/per_night"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/daily_price_per_night"
+                        android:text="@string/per_night"
+                        android:textColor="@color/hotel_cell_disabled_text"
+                        android:textSize="14sp"
+                        app:textStyle="normal" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_info_header_text"
+
+                </LinearLayout>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/total_price_per_night"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/price_container"
+                    android:layout_marginRight="15dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="12sp"
+                    app:textStyle="normal" />
+
+                <ToggleButton
+                    android:id="@+id/view_room_button"
+                    style="@style/HotelToggleButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/total_price_per_night"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:textAppearance="@style/HotelToggleButtonTextAppearance" />
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/room_info_divider"
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/hotel_detail_divider"
+                android:paddingBottom="12dp"
+                android:paddingTop="12dp" />
+
+            <RelativeLayout
+                android:id="@+id/room_info_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/read_more"
-                android:text="@string/room_information"
-                android:textColor="#808080"
-                android:textSize="13sp"
-                app:textStyle="medium" />
+                android:background="?attr/selectableItemBackground"
+                android:paddingBottom="12dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingTop="12dp">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_info_description_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/room_info_header_text"
-                android:textColor="@color/hotelsv2_checkout_text_color"
-                android:paddingTop="8dp"
-                android:textSize="11sp" />
-        </RelativeLayout>
-    </LinearLayout>
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_info_header_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/read_more"
+                    android:text="@string/room_information"
+                    android:textColor="#808080"
+                    android:textSize="13sp"
+                    app:textStyle="medium" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_info_description_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/room_info_header_text"
+                    android:paddingTop="8dp"
+                    android:textColor="@color/hotelsv2_checkout_text_color"
+                    android:textSize="11sp" />
+            </RelativeLayout>
+        </LinearLayout>
 
         <View
             android:id="@+id/row_divider"
